# tauri-plugin-rusqlite

./: Cargo.toml  README.md  build.rs  package.json
dist-js/: index.cjs  index.js
examples/rusqlite-demo/: index.html  package.json  vite.config.js
examples/rusqlite-demo/src/: App.tsx
examples/rusqlite-demo/src-tauri/: Cargo.toml  tauri.conf.json
examples/rusqlite-demo/src-tauri/capabilities/: default.json
examples/rusqlite-demo/src-tauri/src/: lib.rs
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: migration.toml  open_in_memory.toml  open_in_path.toml
permissions/schemas/: schema.json
src/: error.rs  lib.rs
