[package]
name = "tauri-plugin-rusqlite"
version = "0.5.0"
authors = [ "Kess" ]
description = "A Tauri plugin for rusqlite"
license = "MIT"
readme = "README.md"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-rusqlite"

[dependencies]
tauri = "2"
serde = "1.0"
serde_json = "1.0"
thiserror = "2"
rusqlite = { version = "0.31.0", features = [ "bundled" ] }
md5 = "0.7.0"

[build-dependencies]
tauri-plugin = { version = "2.0.4", features = ["build"] }
