[package]
name = "rusqlite-demo"
version = "0.0.0"
description = "A Tauri App"
authors = ["Kess"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.5", default-features = false , features = [] }

[dependencies]
tauri = { version = "2.3.1", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-rusqlite = { path = "../../../" }
serde_json = "1.0"
